fixed thumbnail height, image covers thumbnail

--- a/css/wireframe-custom.css
+++ b/css/wireframe-custom.css
@@ -75,8 +75,7 @@ img {
 }
 
 .modal h1 {
-    text-align: center;
-    font-family: 'Tinos', serif;
+    color: black;
 }
 
 .navbar {
@@ -89,6 +88,9 @@ img {
 }
 
 .img-thumbnail {
-    margin: 5px;
+    width: 100%;
+    height: 250px;
+    margin-bottom: 10px;
+    object-fit: cover;
 }
 
